--- a/updatecli/updatecli.d/venom.yaml
+++ b/updatecli/updatecli.d/venom.yaml
@@ -24,7 +24,7 @@ sources:
       versionfilter:
         kind: semver
     transformers:
-      - addPrefix: "v"
+      - addprefix: "v"
     
 targets:
   goWorkflow:
