feat(scm) introduce the concept of a "local" SCM with (partial) autodetection
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>
Co-authored-by: Hervé Le Meur <91831478+lemeurherve@users.noreply.github.com>

--- a/e2e/updatecli.d/skipped.targets.d/multiple-conditions.yaml
+++ b/e2e/updatecli.d/skipped.targets.d/multiple-conditions.yaml
@@ -1,5 +1,9 @@
 title: Skip targets with only one (failing) condition
 
+scms:
+  local:
+    disabled: true
+
 sources:
   default:
     name: Default Source (dummy)
