--- a/e2e/updatecli.d/success.d/command.yaml
+++ b/e2e/updatecli.d/success.d/command.yaml
@@ -1,25 +1,29 @@
 title: Test Various target scenario
 
+scms:
+  local:
+    disabled: true
+
 targets:
-  1: 
+  1:
     name: Should be succeeding
     kind: shell
     spec:
       command: "true"
 
-#  2: 
-#    name: Should be failling
+#  2:
+#    name: Should be failing
 #    kind: shell
 #    spec:
 #      command: "false"
 #
-#  3: 
-#    name: Should be failling
+#  3:
+#    name: Should be failing
 #    kind: shell
 #    spec:
 #      command: "false"
 #
-#  4: 
+#  4:
 #    name: Should be skipped
 #    depends_on:
 #      - "2"
@@ -27,7 +31,7 @@ targets:
 #    spec:
 #      command: "false"
 
-  5: 
+  5:
     name: Should be succeeding
     kind: shell
     depends_on:
