--- a/e2e/venom.d/test_deprecated.yaml
+++ b/e2e/venom.d/test_deprecated.yaml
@@ -6,7 +6,7 @@ vars:
 testcases:
   - name: "Test updatecli diff shouldn't fail"
     steps:
-      - script: '{{ .binpath }}/updatecli diff --config  ../updatecli.d/deprecated.d --values ../values.yaml'
+      - script: '{{ .binpath }}/updatecli diff --config  ../updatecli.d/deprecated.d'
         type: 'exec'
         assertions:
           - 'result.code ShouldEqual 0'
