--- a/e2e/updatecli.d/success.d/yamlExample.3.yaml
+++ b/e2e/updatecli.d/success.d/yamlExample.3.yaml
@@ -5,10 +5,7 @@ sources:
     name: Test three yaml file
     kind: yaml
     spec:
-      files:
-        - "e2e/updatecli.d/success.d/yamlExample.yaml"
-        - "e2e/updatecli.d/success.d/yamlExample.2.yaml"
-        - "e2e/updatecli.d/success.d/yamlExample.3.yaml"
+      file: "e2e/updatecli.d/success.d/yamlExample.yaml"
       key: "name"
 
   testFile:
@@ -24,17 +21,13 @@ conditions:
     kind: yaml
     sourceid: testFiles
     spec:
-      files:
-        - "e2e/updatecli.d/success.d/yamlExample.yaml"
-        - "e2e/updatecli.d/success.d/yamlExample.2.yaml"
-        - "e2e/updatecli.d/success.d/yamlExample.3.yaml"
+      file: "e2e/updatecli.d/success.d/yamlExample.yaml"
       key: "name"
-      value: "Test yaml resource"
 
   testFile:
     name: Test yaml file
     kind: yaml
-    sourceid: testFile
+    disablesourceinput: true
     spec:
       file: "e2e/updatecli.d/success.d/yamlExample.yaml"
       key: "name"
