Fix example manifest syntax
Signed-off-by: Olblak <me@olblak.com>

--- a/examples/updatecli.d/nginx.yaml
+++ b/examples/updatecli.d/nginx.yaml
@@ -18,6 +18,6 @@ targets:
         email: "update-bot@olblak.com"
         owner: "jenkins-infra"
         repository: "charts"
-        token: ""
+        token: "x"
         username: "olblak"
         branch: "master"
