Add quotes to example manifest
Signed-off-by: Olblak <me@olblak.com>

--- a/examples/updatecli.d/dockerfile.yaml
+++ b/examples/updatecli.d/dockerfile.yaml
@@ -1,8 +1,8 @@
 ---
 sources:
   lastHelmRelease:
-    name: Get Latest helm release version
-    kind: githubRelease
+    name: "Get Latest helm release version"
+    kind: "githubRelease"
     spec:
       owner: "helm"
       repository: "helm"
