--- a/examples/updatecli.d/jenkins-wiki-exporter.yaml
+++ b/examples/updatecli.d/jenkins-wiki-exporter.yaml
@@ -1,6 +1,6 @@
 sources:
   lastRelease:
-    kind: githubrelease
+    kind: "githubrelease"
     name: "Get jenkins-wiki-exporter latest version"
     spec:
       owner: "jenkins-infra"
@@ -8,20 +8,20 @@ sources:
       token: '{{ requiredEnv "GITHUB_TOKEN" }}'
       username: "olblak"
       versionfilter:
-        kind: latest
+        kind: "latest"
 conditions:
   docker:
     name: "Is Docker Image Published on Registry?"
-    kind: dockerimage
+    kind: "dockerimage"
     spec:
       image: "halkeye/jenkins-wiki-exporter"
 targets:
   imageTag:
     name: "Update docker image tag jenkins-wiki-exporter used in helm chart"
-    kind: yaml
+    kind: "yaml"
     spec:
       file: "charts/jenkins-wiki-exporter/values.yaml"
-      key: image.tag
+      key: "image.tag"
     scm:
       github:
         user: "{{ .github.user }}"
@@ -33,10 +33,10 @@ targets:
         branch: "{{ .github.branch }}"
   appVersion:
     name: "Update chart appversion for jenkins-wiki-exporter helm chart"
-    kind: yaml
+    kind: "yaml"
     spec:
       file: "charts/jenkins-wiki-exporter/Chart.yaml"
-      key: appVersion
+      key: "appVersion"
     scm:
       github:
         user: "{{ .github.user }}"
