--- a/examples/updatecli.generic/dockerimage.yaml
+++ b/examples/updatecli.generic/dockerimage.yaml
@@ -1,32 +1,32 @@
 ---
-title: Show a set of dockerimage resources as a generic example
+title: "Show a set of dockerimage resources as a generic example"
 sources:
   latestVersion:
-    kind: shell
+    kind: "shell"
     spec:
-      command: echo latest
+      command: "echo latest"
 
 conditions:
   isNginxAlpinePublished:
     name: 'Is the latest Nginx-Alpine image published on the DockerHub?'
-    kind: dockerImage
-    disablesourceinput: true
+    kind: "dockerImage"
+    disablesourceinput: "true"
     spec:
-      image: nginx
-      tag: alpine
+      image: "nginx"
+      tag: "alpine"
       architecture: "amd64"
   isQuayAnsibleRunnerPublished:
     name: 'Is the latest latest ansible/ansible-runner image published on Quay.io?'
-    kind: dockerImage
-    sourceID: latestVersion
+    kind: "dockerImage"
+    sourceID: "latestVersion"
     spec:
-      image: quay.io/ansible/ansible-runner
+      image: "quay.io/ansible/ansible-runner"
       architecture: "amd64"
       # tag comes from the input source
   isGHCRUpdateCliPublished:
     name: 'Is the latest latest updatecli/updatecli image published on GHCR?'
-    kind: dockerImage
-    sourceID: latestVersion
+    kind: "dockerImage"
+    sourceID: "latestVersion"
     spec:
       image: "ghcr.io/updatecli/updatecli"
       architecture: "arm64"
