--- a/examples/updatecli.generic/helmChart/SCM.2.yaml
+++ b/examples/updatecli.generic/helmChart/SCM.2.yaml
@@ -1,40 +1,40 @@
-title: Bump Jenkins controller docker image tag
+title: "Bump Jenkins controller docker image tag"
 scms:
   olblak-chart:
-    kind: github
+    kind: "github"
     spec:
       user: "updatecli"
       email: "updatecli2@olblak.com"
       owner: "olblak"
       repository: "charts"
-      token: {{ requiredEnv .github.token }}
+      token: "{{ requiredEnv .github.token }}"
       username: "olblak"
       branch: "master"
 pullrequests:
   chart:
-    kind: github
-    scmid: olblak-chart
+    kind: "github"
+    scmid: "olblak-chart"
     targets:
-      - chartjenkins1 
+      - "chartjenkins1"
     spec:
       labels:
-        - bug
+        - "bug"
 sources:
   jenkins:
-    kind: jenkins
-    name: Get Latest Jenkins Stable version
+    kind: "jenkins"
+    name: "Get Latest Jenkins Stable version"
     spec:
-      release: stable
+      release: "stable"
       github:
-        token: {{ requiredEnv .github.token }}
-        username: {{ .github.username }}
+        token: "{{ requiredEnv .github.token }}"
+        username: "{{ .github.username }}"
 targets:
   chartjenkins1:
-    name: Bump Jenkins controller docker image tag
-    kind: helmChart
-    scmID: olblak-chart
+    name: "Bump Jenkins controller docker image tag"
+    kind: "helmChart"
+    scmID: "olblak-chart"
     spec:
-      appVersion: true
+      appVersion: "true"
       Name: "charts/jenkins"
       key: "jenkins.controller.tag"
       versionincrement: "major"
