--- a/examples/updatecli.generic/jenkins.yaml
+++ b/examples/updatecli.generic/jenkins.yaml
@@ -2,36 +2,36 @@ title: "Bump Jenkins stable version"
 
 sources:
   getLatestJenkinsStable:
-    kind: jenkins
+    kind: "jenkins"
   getLatestJenkinsWeekly:
-    kind: jenkins
+    kind: "jenkins"
     spec:
-      release: weekly
+      release: "weekly"
 conditions:
   checkIfThereIsSpecificReleaseVersion:
-    name: Check if 2.263.3 exists as a stable jenkins release
-    kind: jenkins
-    disablesourceinput: true
+    name: "Check if 2.263.3 exists as a stable jenkins release"
+    kind: "jenkins"
+    disablesourceinput: "true"
     spec:
       version: "2.263.3"
   checkIfSourceIsLatestStable:
-    kind: jenkins
-    name: Check if the source value from 'getLatestJenkinsStable' is the latest Jenkins stable version
-    sourceID: getLatestJenkinsStable
+    kind: "jenkins"
+    name: "Check if the source value from 'getLatestJenkinsStable' is the latest Jenkins stable version"
+    sourceID: "getLatestJenkinsStable"
     spec:
-      release: stable
+      release: "stable"
   checkIfThereIsSpecificWeeklyVersion:
-    name: Check if 2.231 exists as a weekly jenkins release
-    kind: jenkins
-    disablesourceinput: true
+    name: "Check if 2.231 exists as a weekly jenkins release"
+    kind: "jenkins"
+    disablesourceinput: "true"
     spec:
       version: "2.231"
-      release: weekly
+      release: "weekly"
   checkIfSourceIsLatestWeekly:
-    kind: jenkins
-    name: Check if the source value from 'getLatestJenkinsWeekly' is the latest Jenkins weekly version
-    sourceID: getLatestJenkinsWeekly
+    kind: "jenkins"
+    name: "Check if the source value from 'getLatestJenkinsWeekly' is the latest Jenkins weekly version"
+    sourceID: "getLatestJenkinsWeekly"
     spec:
-      release: weekly
+      release: "weekly"
 
 # No need for target
