--- a/examples/updatecli.generic/maven.yaml
+++ b/examples/updatecli.generic/maven.yaml
@@ -3,14 +3,14 @@ title: Show a set of maven resources as a generic example
 
 sources:
   getLatestJenkinsWarVersion:
-    kind: maven
+    kind: "maven"
     spec:
       url: "repo.jenkins-ci.org"
       repository: "releases"
       groupID: "org.jenkins-ci.main"
       artifactID: "jenkins-war"
   getLatestJunitVersion:
-    kind: maven
+    kind: "maven"
     spec:
       url: "repo.maven.apache.org"
       repository: "maven2"
@@ -19,9 +19,9 @@ sources:
 
 conditions:
   checkIfOlderJunitExist:
-    kind: maven
-    name: Is there a version 4.3.1 of junit/junit at https://repo.maven.apache.org/maven2
-    disablesourceinput: true
+    kind: "maven"
+    name: "Is there a version 4.3.1 of junit/junit at https://repo.maven.apache.org/maven2"
+    disablesourceinput: "true"
     spec:
       url: "repo.maven.apache.org"
       repository: "maven2"
