--- a/examples/updatecli.generic/runtimeTemplating.yaml
+++ b/examples/updatecli.generic/runtimeTemplating.yaml
@@ -1,56 +1,56 @@
 ---
 sources:
   stable:
-    kind: jenkins
+    kind: "jenkins"
     depends_on:
-      - weekly
+      - "weekly"
     name: 'Get Latest Jenkins stable version and depends on {{ pipeline "sources.weekly.name" }}'
 #    spec:
 #      github:
 #        token: {{ requiredEnv .github.token }}
 #        username: {{ .github.username }}
   weekly:
-    kind: jenkins
-    name: Get Latest Jenkins weekly version
+    kind: "jenkins"
+    name: "Get Latest Jenkins weekly version"
 #    spec:
-#      release: weekly
+#      release: "weekly"
 #      github:
-#        token: {{ requiredEnv .github.token }}
-#        username: {{ .github.username }}
+#        token: "{{ requiredEnv .github.token }}"
+#        username: "{{ .github.username }}"
 conditions:
   stabledockerImage:
     name: 'Is docker image jenkins/jenkins:{{ pipeline "sources.stable.kind" }} published?'
-    kind: dockerImage
-    sourceID: stable
+    kind: "dockerImage"
+    sourceID: "stable"
     spec:
-      image: jenkins/jenkins
+      image: "jenkins/jenkins"
       tag: '{{ source "stable" }}-jdk11'
   weeklydockerImage:
     name: 'Is docker image tag{{ context "Sources.weekly.Output" }} published?'
-    kind: dockerImage
-    sourceID: weekly
+    kind: "dockerImage"
+    sourceID: "weekly"
     spec:
-      image: jenkins/jenkins
+      image: "jenkins/jenkins"
       tag: '{{ context "Sources.weekly.Output" }}-jdk11'
   weekly2dockerImage:
     name: 'Is docker image tag{{ context "Sources.weekly.Output" }} published?'
-    kind: dockerImage
-    sourceID: weekly
+    kind: "dockerImage"
+    sourceID: "weekly"
     spec:
-      image: jenkins/jenkins
+      image: "jenkins/jenkins"
       tag: '{{ context "Sources.weekly.Output" }}-jdk11'
   weekly3dockerImage:
     name: 'Is docker image tag{{ context "Sources.weekly.Output" }} published?'
-    kind: dockerImage
-    sourceID: weekly
+    kind: "dockerImage"
+    sourceID: "weekly"
     spec:
-      image: jenkins/jenkins
+      image: "jenkins/jenkins"
       tag: '{{ context "Sources.weekly.Output" }}-jdk11'
 targets:
   imageTag:
     name: 'Update jenkins/jenkins docker tag to {{ context "Sources.weekly.Output" }}-jdk11'
-    kind: yaml
-    sourceID: stable
+    kind: "yaml"
+    sourceID: "stable"
     spec:
       file: "charts/jenkins/values.yaml"
       key: "jenkins.controller.tag"
@@ -58,6 +58,6 @@ targets:
     scm:
       git:
         url: "git@github.com:olblak/charts.git"
-        branch: master
-        user: olblak
-        email: me@olblak.com
+        branch: "master"
+        user: "olblak"
+        email: "me@olblak.com"
