--- a/examples/updatecli.generic/shell/shell.yaml
+++ b/examples/updatecli.generic/shell/shell.yaml
@@ -1,8 +1,8 @@
 ---
-title: Show a set of shell resources as a generic example
+title: "Show a set of shell resources as a generic example"
 sources:
   default:
-    kind: shell
+    kind: "shell"
     spec:
       command: "examples/updatecli.generic/shell/source.sh"
   ## Uncomment to test a failing source
@@ -13,15 +13,15 @@ sources:
 
 conditions:
   noSource:
-    kind: shell
-    disablesourceinput: true
+    kind: "shell"
+    disablesourceinput: "true"
     spec:
       command: "examples/updatecli.generic/shell/condition.sh"
   withSource:
-    kind: shell
-    sourceID: default
+    kind: "shell"
+    sourceID: "default"
     spec:
-      command: echo
+      command: "echo"
   ## Uncomment to check a failing condition
   # noDirectoryTiTi:
   #   kind: shell
@@ -31,13 +31,13 @@ conditions:
 
 targets:
   changeGrepVersion:
-    sourceID: default
-    kind: shell
+    sourceID: "default"
+    kind: "shell"
     spec:
       command: "examples/updatecli.generic/shell/target.sh change"
   doesNotChangeAnything:
-    sourceID: default
-    kind: shell
+    sourceID: "default"
+    kind: "shell"
     spec:
       command: "examples/updatecli.generic/shell/target.sh do-not-change"
   ## Uncomment to test a failing source
