Add subcommand to upgrade Updatecli manifest  (#671)
* Move some config function to a helper file for better visibility

Signed-off-by: Olblak <me@olblak.com>

* Add the ability to save config back to disk

Signed-off-by: Olblak <me@olblak.com>

* Split config validate function into smaller one

Signed-off-by: Olblak <me@olblak.com>

* Split template.Init into smaller function

Signed-off-by: Olblak <me@olblak.com>

* Refactor config

Signed-off-by: Olblak <me@olblak.com>

* Implement config option struct

Signed-off-by: Olblak <me@olblak.com>

* Test omitempty tag on deprecated struct field

Signed-off-by: Olblak <me@olblak.com>

* Add disable templating option to config

Signed-off-by: Olblak <me@olblak.com>

* Add subcommand manifest upgrade

Signed-off-by: Olblak <me@olblak.com>

* Rename config.Option to config.Options

Add function to upgrade manifest

Add specific config option in pipeline option

Signed-off-by: Olblak <me@olblak.com>

* Rename Config struct to Config.Spec

Signed-off-by: Olblak <me@olblak.com>

* Add filename to config struct

Signed-off-by: Olblak <me@olblak.com>

* Add key to struct literal

Signed-off-by: Olblak <me@olblak.com>

* Disable templating for manifest upgrade

Signed-off-by: Olblak <me@olblak.com>

* Display error message

Signed-off-by: Olblak <me@olblak.com>

* Use openFile instead of open for writing

Signed-off-by: Olblak <me@olblak.com>

* Add yaml noempty for option fields

Signed-off-by: Olblak <me@olblak.com>

* Fix config spec

Signed-off-by: Olblak <me@olblak.com>

* Add updatecli version compatibility check

Signed-off-by: Olblak <me@olblak.com>

* always check updatecli version compatibility

Signed-off-by: Olblak <me@olblak.com>

* Set yaml tag omitempty to all spec field

Add missing spec documentation

Fix error message

Signed-off-by: Olblak <me@olblak.com>

* Specifies required jsonschema field

Signed-off-by: Olblak <

--- a/examples/updatecli.d/nginx.yaml
+++ b/examples/updatecli.d/nginx.yaml
@@ -1,6 +1,6 @@
 sources:
   lastDockerDigest:
-    kind: dockerdigest
+    kind: "dockerdigest"
     name: "Get latest nginx:1.17 from dockerhub"
     spec:
       image: "library/nginx"
@@ -8,16 +8,16 @@ sources:
 targets:
   jenkinsioNginxDigest:
     name: "Jenkins.io nginx"
-    kind: yaml
+    kind: "yaml"
     spec:
       file: "charts/jenkins.io/values.yaml"
-      key: image.tag
+      key: "image.tag"
     scm:
       github:
         user: "update-bot"
         email: "update-bot@olblak.com"
         owner: "jenkins-infra"
         repository: "charts"
-        token: ""
+        token: "x"
         username: "olblak"
         branch: "master"
