--- a/examples/updatecli.d/sources/dockerfile_sources.yaml
+++ b/examples/updatecli.d/sources/dockerfile_sources.yaml
@@ -1,33 +1,33 @@
 ---
-title: Bump jenkinsciinfra/helmfile image
+title: "Bump jenkinsciinfra/helmfile image"
 sources:
   helm1:
-    name: Get Latest helm release version
-    kind: githubrelease
+    name: "Get Latest helm release version"
+    kind: "githubrelease"
     spec:
       owner: "helm"
       repository: "helm"
       token: '{{ requiredEnv .github.token }}'
-      username: olblak
+      username: "olblak"
       versionfilter:
-        kind: latest
+        kind: "latest"
   helm2:
-    name: Get Latest helm release version
-    kind: githubrelease
+    name: "Get Latest helm release version"
+    kind: "githubrelease"
     spec:
       owner: "helm"
       repository: "helm"
       token: '{{ requiredEnv .github.token }}'
-      username: olblak
+      username: "olblak"
       versionfilter:
-        kind: latest
+        kind: "latest"
 conditions:
   isENVSet:
-    sourceid: helm
-    name: Is the 2nd ENV instruction having a "keyword" set to "HELM_VERSION"
-    kind: dockerfile
+    sourceid: "helm1"
+    name: 'Is the 2nd ENV instruction having a "keyword" set to "HELM_VERSION"'
+    kind: "dockerfile"
     spec:
-      file: docker/Dockerfile
+      file: "docker/Dockerfile"
       instruction: "ENV[1][0]"
       value: "HELM_VERSION"
     scm:
@@ -36,39 +36,39 @@ conditions:
         email: "updatecli@olblak.com"
         owner: "olblak"
         repository: "charts"
-        token: {{ requiredEnv "GITHUB_TOKEN" }}
+        token: '{{ requiredEnv "GITHUB_TOKEN" }}'
         username: "olblak"
         branch: "master"
 targets:
   updateHelm:
-    name: Update the 2nd element of the 2nd ENV instruction to the source value
-    sourceid: helm
-    kind: dockerfile
+    name: "Update the 2nd element of the 2nd ENV instruction to the source value"
+    sourceid: "helm1"
+    kind: "dockerfile"
     spec:
-      file: docker/Dockerfile
-      instruction: ENV[1][1]
+      file: "docker/Dockerfile"
+      instruction: "ENV[1][1]"
     scm:
       github:
         user: "updatecli"
         email: "updatecli@olblak.com"
         owner: "olblak"
         repository: "charts"
-        token: {{ requiredEnv "GITHUB_TOKEN" }}
+        token: '{{ requiredEnv "GITHUB_TOKEN" }}'
         username: "olblak"
         branch: "master"
   updateChecksum:
-    name: Update Helm checksum
-    sourceid: checksum
-    kind: dockerfile
+    name: "Update Helm checksum"
+    sourceid: "helm1"
+    kind: "dockerfile"
     spec:
-      file: docker/Dockerfile
-      instruction: ENV[5][1]
+      file: "docker/Dockerfile"
+      instruction: "ENV[5][1]"
     scm:
       github:
         user: "updatecli"
         email: "updatecli@olblak.com"
         owner: "olblak"
         repository: "charts"
-        token: {{ requiredEnv "GITHUB_TOKEN" }}
+        token: '{{ requiredEnv "GITHUB_TOKEN" }}'
         username: "olblak"
         branch: "master"
