--- a/e2e/updatecli.d/success.d/gitea/branch.yaml
+++ b/e2e/updatecli.d/success.d/gitea/branch.yaml
@@ -7,7 +7,8 @@ sources:
       url: "try.gitea.io"
       owner: "olblak"
       repository: "updatecli-test"
-        
+      branch: main
+
 conditions:
   default:
     kind: "gitea/branch"
