--- a/e2e/updatecli.d/success.d/gitea/scm.yaml
+++ b/e2e/updatecli.d/success.d/gitea/scm.yaml
@@ -7,6 +7,7 @@ scms:
       url: "try.gitea.io"
       owner: "olblak"
       repository: "updatecli-mirror"
+      branch: main
 
 sources:
   license:
