chore(golangci-lint) explicitly disable checkers not available for go1.18 - https://github.com/golangci/golangci-lint/issues/2649
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -90,8 +90,10 @@ linters:
     - misspell
     - nakedret
     - nolintlint
-    - rowserrcheck
-    - structcheck
+    # Disabled until fixed for go1.18 - https://github.com/golangci/golangci-lint/issues/2649
+    # - rowserrcheck
+    # Disabled until fixed for go1.18 - https://github.com/golangci/golangci-lint/issues/2649
+    #- structcheck
     # - stylecheck
     - typecheck
     - unconvert
