--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -63,6 +63,7 @@ jobs:
           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+          UPDATECLI_GITEA_TOKEN: ${{ secrets.UPDATECLI_GITEA_TOKEN }}
         run: make test
         if: ${{ github.event_name == 'schedule' }}
       - name: Run End to End tests
