--- a/e2e/updatecli.d/success.d/source/dockerimage.yaml
+++ b/e2e/updatecli.d/success.d/source/dockerimage.yaml
@@ -17,21 +17,21 @@ sources:
       architecture: amd64
   ## Dockerhub return an alphabetically ordered list of docker image tag
   # semver doesn't work in the current state
-  #dockerhub-semver:
-  #  name: Get Latest semver Tag for Dockerhub
-  #  kind: dockerimage
-  #  spec:
-  #    image: "updatecli/updatecli"
-  #    architecture: amd64
-  #    versionFilter:
-  #      kind: semver
-  ## Ghcr return an created time ordered list of container image tag
+  dockerhub-semver:
+    name: Get Latest semver Tag for Dockerhub
+    kind: dockerimage
+    spec:
+      image: "updatecli/updatecli"
+      architecture: amd64
+      versionFilter:
+        kind: semver
+  # Ghcr return an created time ordered list of container image tag
   # semver doesn't work in the current state
-  # ghcr.io-semver:
-  #   name: Get Latest semver Tag from ghcr
-  #   kind: dockerimage
-  #   spec:
-  #     image: "ghcr.io/updatecli/updatecli"
-  #     architecture: amd64
-  #     versionFilter:
-  #       kind: semver
+  ghcr.io-semver:
+    name: Get Latest semver Tag from ghcr
+    kind: dockerimage
+    spec:
+      image: "ghcr.io/updatecli/updatecli"
+      architecture: amd64
+      versionFilter:
+        kind: semver
