Source using semver return originalVesion and not parsedVersion
Signed-off-by: Olblak <me@olblak.com>

--- a/e2e/updatecli.d/success.d/gitea/tag.yaml
+++ b/e2e/updatecli.d/success.d/gitea/tag.yaml
@@ -16,6 +16,13 @@ sources:
       url: "try.gitea.io"
       owner: "olblak"
       repository: "updatecli-test"
+
+  mirror:
+    kind: "gitea/tag"
+    spec:
+      url: "try.gitea.io"
+      owner: "olblak"
+      repository: "updatecli-mirror"
         
 conditions:
   default:
