Rename originVersion parameter to keeporiginalversion
Signed-off-by: Olblak <me@olblak.com>

--- a/e2e/updatecli.d/success.d/githubrelease.yaml
+++ b/e2e/updatecli.d/success.d/githubrelease.yaml
@@ -7,6 +7,6 @@ sources:
       repository: updatecli
       token: '{{ requiredEnv "GITHUB_TOKEN" }}'
       username: '{{ requiredEnv "GITHUB_ACTOR" }}'
-      originalVersion: true
+      keeporiginalversion: true
       versionfilter:
         kind: semver
