--- a/e2e/updatecli.d/success.d/gittag.yaml
+++ b/e2e/updatecli.d/success.d/gittag.yaml
@@ -9,6 +9,6 @@ sources:
     kind: gittag
     scmid: default
     spec:
-      originalVersion: true
+      keeporiginalVersion: true
       versionFilter:
         kind: semver
