Add e2e test case
Signed-off-by: Olblak <me@olblak.com>

--- a/e2e/updatecli.d/success.d/gittag.yaml
+++ b/e2e/updatecli.d/success.d/gittag.yaml
@@ -12,3 +12,9 @@ sources:
       keeporiginalVersion: true
       versionFilter:
         kind: semver
+  regex:
+    kind: gittag
+    scmid: default
+    spec:
+      versionFilter:
+        kind: regex
