--- a/e2e/updatecli.d/success.d/githubrelease.yaml
+++ b/e2e/updatecli.d/success.d/githubrelease.yaml
@@ -10,3 +10,13 @@ sources:
       keeporiginalversion: true
       versionfilter:
         kind: semver
+  regex:
+    name: Get latest Venom release
+    kind: githubrelease
+    spec:
+      owner: updatecli
+      repository: updatecli
+      token: '{{ requiredEnv "GITHUB_TOKEN" }}'
+      username: '{{ requiredEnv "GITHUB_ACTOR" }}'
+      versionfilter:
+        kind: regex
