Add keeporiginalversion to gittag e2e test

--- a/e2e/updatecli.d/success.d/source/gitTag.yaml
+++ b/e2e/updatecli.d/success.d/source/gitTag.yaml
@@ -21,4 +21,5 @@ sources:
       versionfilter:
         kind: semver
         pattern: "~0.1"
+      keeporiginalversion: true
     scmid: updatecli
