--- a/e2e/updatecli.d/warning.d/githubrelease.yaml
+++ b/e2e/updatecli.d/warning.d/githubrelease.yaml
@@ -1,6 +1,6 @@
 sources:
   latestVersion:
-    name: Get latest Venom release
+    name: Get latest Updatecli release
     kind: githubrelease
     spec:
       owner: updatecli
