--- a/updatecli/updatecli.d/venom.yaml
+++ b/updatecli/updatecli.d/venom.yaml
@@ -21,7 +21,7 @@ sources:
       repository: venom
       token: '{{ requiredEnv "UPDATECLI_GITHUB_TOKEN" }}'
       username: '{{ requiredEnv "UPDATECLI_GITHUB_ACTOR" }}'
-      originalVersion: true
+      keeporiginalversion: true
       versionfilter:
         kind: semver
     
