--- a/e2e/updatecli.d/warning.d/autodiscovery/helm/example.1.yaml
+++ b/e2e/updatecli.d/warning.d/autodiscovery/helm/example.1.yaml
@@ -9,6 +9,8 @@ autodiscovery:
   scmid: epinio
   crawlers:
     helm:
+      # Enabled by default
+      enable: true
       # To ignore specific path
       #ignore:
       #  # - path: chart/epinio-ui/*
