Update autodiscovery example
Signed-off-by: Olblak <me@olblak.com>

--- a/e2e/updatecli.d/warning.d/autodiscovery/helm/example.1.yaml
+++ b/e2e/updatecli.d/warning.d/autodiscovery/helm/example.1.yaml
@@ -13,10 +13,9 @@ autodiscovery:
       enable: true
       # To ignore specific path
       #ignore:
-      #  # - path: chart/epinio-ui/*
-      #  # - path: /home/olblak/Projects/Epinio/helm-charts/chart/epinio/*
-      #  # - path: chart/epinio/*
+      #  # - path: <filepath relative to scm repository>
+      #  # - path: chart/*
       #only:
-      #  # - path: /home/olblak/Projects/Epinio/helm-charts/chart/epinio/*
-      #  - path: chart/epinio/*
+      #  # - path: <filepath relative to scm repository>
+      #  # - path: chart/*
 #
