--- a/e2e/updatecli.d/warning.d/autodiscovery/fleet/git.yaml
+++ b/e2e/updatecli.d/warning.d/autodiscovery/fleet/git.yaml
@@ -1,24 +1,21 @@
 scms:
-  epinio:
+  fleet-lab:
     kind: git 
     spec:
       url: https://github.com/olblak/fleet-lab.git
     
 autodiscovery:
   # scmid is applied to all crawlers
-  scmid: epinio
+  scmid: fleet-lab
   crawlers:
     helm:
       # By default enabled
       enable: true
       # To ignore specific path
       #ignore:
-      #  # - path: chart/epinio-ui/*
-      #  # - path: /home/olblak/Projects/Epinio/helm-charts/chart/epinio/*
-      #  # - path: chart/epinio/*
+      #  - path: <filepath relative to scm repository>
       #only:
-      #  # - path: /home/olblak/Projects/Epinio/helm-charts/chart/epinio/*
-      #  - path: chart/epinio/*
+      #  - path: <filepath relative to scm repository>
     fleet:
       # By default it's enable 
       enable: true
