--- a/e2e/updatecli.d/warning.d/autodiscovery/fleet/githubPullrequest.yaml
+++ b/e2e/updatecli.d/warning.d/autodiscovery/fleet/githubPullrequest.yaml
@@ -34,6 +34,6 @@ autodiscovery:
       enable: true
       # To ignore specific path
       #ignore:
-      #  # - path: <filepath relative to scm repository>
+      # - path: <filepath relative to scm repository>
       #only:
-      #  # - path: <filepath relative to scm repository>
+      #  - path: <filepath relative to scm repository>
